--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
 </head>
 
-<body>
+<body>s
     <div class="content">
         <div class="container">
             <h1>WDE MONITOR</h1>
@@ -17,7 +17,7 @@
                 
             
             <p>Fill the form below then submit to get the activity</p>
-            <form class="myform" onsubmit="return id Number()">
+            <form class="myform" onsubmit="return idNumber()">
                 <label for="employment number">
          employment number:
             <input id="employment number-input" type="number" name="employment number" placeholder="employment number" value="" required>
