index.html file

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
    
 </head>
 
-<body>s
+<body>
     <div class="content">
         <div class="container">
             <h1>WDE MONITOR</h1>
             <p>This web application takes the agents employment number,runs it in the wde system and checks the currect activity for the agent.
-                 </p>from the app the agents gets to know whether there is a problem with the system and seak assistance on time.
+                 </p>From the app the agents gets to know whether there is a problem with the system and seak assistance on time.
                 
             
             <p>Fill the form below then submit to get the activity</p>
