--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <input id="my shift" type="radio" name="my shift" value="my shift" required>
             check wde activity
             <input id="wde activity" type="radio" name="wde activity" value="wde activity" required>
+            log off
+            <input id="wde activity" type="radio" name="wde activity" value="wde activity" required>
             
 
           </label>
